Refactor with Tsyringe
