# src/modules/cars/useCases/createCategory/CreateCategoryController.ts
@@ -1,14 +1,14 @@
 import { Request, Response } from 'express';
+import { container } from 'tsyringe';
 import { CreateCategoryService } from './CreateCategoryService';
 
 class CreateCategoryController {
-  constructor(private createCategoryService: CreateCategoryService) {}
-
   async handle(request: Request, response: Response): Promise<Response> {
     const { name, description } = request.body;
+    const createCategoryService = container.resolve(CreateCategoryService);
 
     try {
-      const category = await this.createCategoryService.execute({
+      const category = await createCategoryService.execute({
         name,
         description,
       });
