# src/routes/categories.routes.ts
@@ -1,25 +1,21 @@
 import { Router } from 'express';
 import multer from 'multer';
 
-import createCategoryController from '../modules/cars/useCases/createCategory';
-import importCategoryController from '../modules/cars/useCases/importCategory';
-import listCategoryController from '../modules/cars/useCases/listCategory';
+import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController';
+import { ListCategoryController } from '../modules/cars/useCases/listCategory/ListCategoryController';
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController';
 
 const categoriesRoutes = Router();
 const upload = multer({
   dest: 'tmp/',
 });
 
-categoriesRoutes.post('/', (request, response) => {
-  createCategoryController().handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const listCategoryController = new ListCategoryController();
+const importCategoryController = new ImportCategoryController();
 
-categoriesRoutes.get('/', (request, response) => {
-  listCategoryController().handle(request, response);
-});
-
-categoriesRoutes.post('/import', upload.single('file'), (request, response) => {
-  importCategoryController().handle(request, response);
-});
+categoriesRoutes.post('/', createCategoryController.handle);
+categoriesRoutes.get('/', listCategoryController.handle);
+categoriesRoutes.post('/import', upload.single('file'), importCategoryController.handle);
 
 export { categoriesRoutes };
