# src/routes/specification.routes.ts
@@ -1,15 +1,13 @@
 import { Router } from 'express';
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification';
-import { listSpecificationController } from '../modules/cars/useCases/listSpecification';
+import { CreateSpecificationController } from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
+import { ListSpecificationController } from '../modules/cars/useCases/listSpecification/ListSpecificationController';
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post('/', (request, response) => {
-  return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
+const listSpecificationController = new ListSpecificationController();
 
-specificationsRoutes.get('/', (request, response) => {
-  return listSpecificationController.handle(request, response);
-});
+specificationsRoutes.post('/', createSpecificationController.handle);
+specificationsRoutes.get('/', listSpecificationController.handle);
 
 export { specificationsRoutes };
